Add Demo Video Embed

--- a/index.html
+++ b/index.html
@@ -233,7 +233,24 @@
     </div>
   </section>
 
+  <!-- Demo Video Section -->
 <section class="section hero is-light2">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Demo Video</h2>
+        <div class="content has-text-justified">
+          <!-- Add your content for the Demo Video section here -->
+          <!-- Replace the video ID below with your YouTube video ID -->
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/Ne89Un3y4Yo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+<section class="section hero is-light">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
@@ -255,7 +272,7 @@
 </section>
 
   <!-- Thank you -->
-  <section class="section hero is-light">
+  <section class="section hero is-light2">
     <div class="container is-max-desktop">
       <div class="columns is-centered has-text-centered">
         <div class="column is-four-fifths">
