--- a/index.html
+++ b/index.html
@@ -256,8 +256,8 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Future Work</h2>
         <p style="text-align: justify; font-size: 16px; line-height: 1.5; margin-top: 10px; color: #333;">
-        We have explored just one aspect of DevOps; there is scope for this sort of work in many other aspects. The possibilities are endless.</p>
-        <hr> <!-- Line break -->
+        Companies generate PetBytes of data each day, and with the right anonymisation we can extend our work. We have explored just one aspect of DevOps; there is scope for this sort of work in many other aspects. </p>
+        <br> <!-- Line break -->
         <div class="content has-text-justified">
           <div class="item">
             <!-- Your image here -->
