--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3">Demo Video</h2>
+        <h2 class="title is-3">Teaser</h2>
         <div class="content has-text-justified">
           <!-- Add your content for the Demo Video section here -->
           <!-- Replace the video ID below with your YouTube video ID -->
